--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <h3>Descrição</h3>
                 <ul>
                     <li>
-                        <strong>Agrega:</strong> considera todos os tipos de variações no seletor CSS. <i>Exemplo</i>: <pre>.wood, .arm, .woo.arm</pre>
+                        <strong>Agrega:</strong> considera todos os tipos de variações no seletor CSS. <i>Exemplo</i>: <pre>.wood, .arm, .ab, .wood.arm, .wood.ab</pre>
                     </li>
                     <li>
-                        <strong>Excludente:</strong> considera somente as combinações no seletor CSS.  <i>Exemplo</i>: <pre>.woo.arm</pre>
+                        <strong>Excludente:</strong> considera somente as combinações no seletor CSS.  <i>Exemplo</i>: <pre>.wood.arm, .wood.ab</pre>
                     </li>
                 </ul>
             </div>
@@ -104,7 +104,6 @@
         </div>
         <script src="jquery-3.1.1.js"></script>
         <script src="vendor/slick-1.6.0/slick/slick.js"></script>
-        <!--<script src="owl.carousel/owl-carousel/owl.carousel.js"></script>-->
         <script src="index.js"></script>
     </body>
 </html>
